# cubil

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.cubil/backlog/: implement-edit.md  implement-init.md  implement-new.md
.cubil/doing/: add-claude-plugin.md  implement-init.md  implement-start-finish.md
.cubil/done/: add-claude-plugin.md  add-cubil-update-command-and-stale-version-warning.md  implement-list.md  implement-mv.md  implement-rm.md  implement-show.md  implement-start-finish.md  release-infra.md
.github/workflows/: release.yml
.skulk/: config.toml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/cubil-task-management/: SKILL.md
src/: main.rs
src/commands/: edit.rs  finish.rs  init.rs  list.rs  mod.rs  mv.rs  new.rs  rm.rs  show.rs  start.rs  update.rs
src/commands/roadmap/: add.rs  list.rs  mod.rs  new.rs  next.rs  rm.rs  show.rs
src/core/: error.rs  frontmatter.rs  mod.rs  roadmap.rs  root.rs  slug.rs  updater.rs
tests/: edit.rs  finish.rs  init.rs  list.rs  mv.rs  new.rs  rm.rs  roadmap.rs  show.rs  stale_warning.rs  start.rs  update.rs
tests/common/: mod.rs
