[package]
name = "cubil"
version = "0.1.3"
edition = "2024"
description = "Markdown-based task management CLI — companion to Skulk"
license = "MIT"
repository = "https://github.com/frantufro/cubil"
homepage = "https://github.com/frantufro/cubil"

[dependencies]
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", default-features = false, features = ["std", "local-offset"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
